[gd_scene load_steps=17 format=3 uid="uid://bj2bcbotycywu"]

[ext_resource type="Script" path="res://Scenes/Mob/mob_base.gd" id="1_5cc12"]
[ext_resource type="Script" path="res://Scripts/mob_state_machine.gd" id="2_rwoo1"]
[ext_resource type="Script" path="res://Scripts/mob_wander_state.gd" id="3_41t13"]
[ext_resource type="Script" path="res://Scripts/mob_chase_state.gd" id="4_eypuk"]
[ext_resource type="Script" path="res://Scripts/mob_idle_state.gd" id="5_od6dr"]
[ext_resource type="Script" path="res://Scripts/mob_home_state.gd" id="6_ipeda"]
[ext_resource type="Texture2D" uid="uid://dnx4yp2bknlio" path="res://Sprites/all_mob.png" id="7_br4v5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0w8w2"]
radius = 12.0416

[sub_resource type="Animation" id="Animation_qu1vh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AllMob:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(1, 2)]
}

[sub_resource type="Animation" id="Animation_7d73w"]
resource_name = "edna_idle"
length = 0.8
loop_mode = 1
step = 0.1

[sub_resource type="Animation" id="Animation_o3h3g"]
resource_name = "edna_move"
length = 0.4
loop_mode = 1
step = 0.05

[sub_resource type="Animation" id="Animation_qxjof"]
resource_name = "gran_idle"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AllMob:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2), Vector2i(6, 2), Vector2i(7, 2)]
}

[sub_resource type="Animation" id="Animation_wdmlv"]
resource_name = "gran_move"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AllMob:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3), Vector2i(4, 3), Vector2i(5, 3), Vector2i(6, 3), Vector2i(7, 3)]
}

[sub_resource type="Animation" id="Animation_vvl6f"]
resource_name = "tache_idle"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AllMob:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(2, 5), Vector2i(3, 5), Vector2i(4, 5), Vector2i(5, 5)]
}

[sub_resource type="Animation" id="Animation_dajxo"]
resource_name = "tache_move"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AllMob:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4), Vector2i(3, 4), Vector2i(4, 4), Vector2i(5, 4), Vector2i(6, 4), Vector2i(7, 4)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5qaxx"]
_data = {
"RESET": SubResource("Animation_qu1vh"),
"edna_idle": SubResource("Animation_7d73w"),
"edna_move": SubResource("Animation_o3h3g"),
"gran_idle": SubResource("Animation_qxjof"),
"gran_move": SubResource("Animation_wdmlv"),
"tache_idle": SubResource("Animation_vvl6f"),
"tache_move": SubResource("Animation_dajxo")
}

[node name="MobGran" type="CharacterBody2D"]
y_sort_enabled = true
position = Vector2(0, -6)
collision_layer = 7
script = ExtResource("1_5cc12")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("CircleShape2D_0w8w2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_5qaxx")
}

[node name="MobStateMachine" type="Node" parent="." node_paths=PackedStringArray("state")]
script = ExtResource("2_rwoo1")
state = NodePath("MobWanderState")

[node name="MobWanderState" type="Node" parent="MobStateMachine" node_paths=PackedStringArray("actor", "vision_cast")]
script = ExtResource("3_41t13")
actor = NodePath("../..")
vision_cast = NodePath("../../RayCast2D")

[node name="MobChaseState" type="Node" parent="MobStateMachine" node_paths=PackedStringArray("actor", "vision_cast")]
script = ExtResource("4_eypuk")
actor = NodePath("../..")
vision_cast = NodePath("../../RayCast2D")

[node name="MobIdleState" type="Node" parent="MobStateMachine" node_paths=PackedStringArray("actor")]
script = ExtResource("5_od6dr")
actor = NodePath("../..")

[node name="MobHomeState" type="Node" parent="MobStateMachine" node_paths=PackedStringArray("actor", "vision_cast")]
script = ExtResource("6_ipeda")
actor = NodePath("../..")
vision_cast = NodePath("../../RayCast2D")

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, 87)
collision_mask = 4

[node name="AllMob" type="Sprite2D" parent="."]
position = Vector2(0, -1)
texture = ExtResource("7_br4v5")
hframes = 8
vframes = 6
frame = 17
